# headless-pm

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  clear_metadata_cache.py  env-example  install_client.sh  pyproject.toml  revert_to_uppercase.py  run-100x-validation.sh  start.sh  test-seamless-installation.sh  test_complete_reliability_validation.py
agent_logs/: dev_001_1750915400.json
agents/client/: README.md  advanced-runner-plan.md  auto-commit-example-settings.json  git-auto-commit.sh  headless_pm_client.py  setup_in_project.sh
agents/client/advanced_runner/: README.md  __init__.py  advanced_agent_runner.py  config.py
agents/client/advanced_runner/components/: __init__.py  claude_executor.py  git_worktree.py  hook_runner.py  model_mapper.py  task_persistence.py  terminal_ui.py
agents/client/advanced_runner/hooks/: health_check.py  post_task.py  pre_task.py
agents/client/runners/: README.md  agent_runner.sh  install.sh  run_agent.sh
agents/client/team_roles/: architect.md  backend_dev_junior.md  frontend_dev.md  fullstack_dev.md  pm.md  qa_junior.md
agents/client/tests/integration/shell/: README.md  run_all_tests.sh  setup_test_env.sh  test_continuous_mode.sh  test_dev_to_qa_flow.sh  test_helpers.sh  test_single_task.sh  test_task_recovery.sh
agents/mcp/: pm.md  shared_instructions.md
dashboard/: example.env.local  package-lock.json
dashboard/playwright-report/: index.html
dashboard/src/app/: layout.tsx
dashboard/src/app/agents/: page.tsx
dashboard/src/app/analytics/: page.tsx
dashboard/src/app/tasks/: page.tsx
dashboard/src/components/agents/: agent-activity-feed-real.tsx  agent-details-modal-simple.tsx  agent-grid.tsx  agent-stats.tsx
dashboard/src/components/layout/: navigation.tsx  page-layout.tsx
dashboard/src/components/tasks/: task-board-merged.tsx  task-board-simple.tsx  task-board.tsx  task-detail-modal.tsx  task-filters.tsx  task-timeline.tsx
dashboard/src/lib/api/: client.ts
dashboard/src/lib/hooks/: useApi.ts
dashboard/src/lib/types/: index.ts
dashboard/tests/: task-epic-filter.spec.ts
docs/: ADVANCED_RUNNER_IMPLEMENTATION.md  DOCUMENTATION_QUALITY_CONTROL.md  STATUS_FLOW_DIAGRAM.md  TASK_STATUS_GUIDE.md  TESTING_MCP_INTEGRATION.md
docs/development/: MCP_API_MIGRATION.md
docs/testing/: UV_INSTALLATION_DEMO.md
migrations/: add_pending_status.py  backfill_created_to_pending.py  migrate_connection_type.py  migrate_service_ping.py  migrate_to_text_columns.py
setup/: README.md  requirements.txt  universal_setup.sh
src/: __init__.py  main.py
src/api/: dependencies.py  public_routes.py  routes.py  schemas.py
src/cli/: dashboard.py  main.py
src/mcp/: server.py
src/models/: database.py  enums.py  models.py  sa_types.py
src/services/: task_management_service.py  task_service.py
src/utils/: __init__.py  atomic_file_ops.py  process_registry.py
tests/: conftest.py  process_tree_leak_detective.py  retry_decorator.py  session_cleanup.py  test_backend_dev_assignment.py  test_fork_bomb_prevention.py  test_headless_pm_client.py  test_helpers.py  test_isolation_audit.py  test_mcp_autodiscovery.py  test_mcp_instrumented_diagnostics.py  test_pid_conflict_edge_cases.py  test_race_condition_detector.py  test_task_assignment_fix.py
tests/unit/: test_api_routes.py  test_mcp_server.py  test_models.py  test_schemas.py
